--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 /* apply styles to <header> */
 header {
-  flex-wrap: ;
+  flex-wrap: wrap;
   justify-content: space-between;
   display: flex;
   padding: 20px 35px;
@@ -50,6 +50,8 @@ header nav ul li a {
 }
 
 footer {
+  justify-content: space-between;
+  flex-wrap: wrap;
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
@@ -78,6 +80,9 @@ section {
 
 /* Hero Style Start */
 .hero {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   background-image: url('../images/hero-bg.jpg');
   height: 600px;
   background-size: cover;
@@ -85,13 +90,29 @@ section {
   position: relative;
 }
 
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
+
 /* Hero Style End */
 
 .hero-form {
+  margin: 3.5%;
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
+  width: 40%;
   color: #024e76;
   position: absolute;
   bottom: 120px;
